--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/cli": "^4.13.1",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
@@ -22,6 +23,7 @@
     "react": "16.13.1",
     "react-native": "^0.63.4",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-image-picker": "^3.1.0",
     "react-native-masked-text": "^1.13.0",
     "react-native-permissions": "^3.0.0",
     "react-native-reanimated": "^1.13.2",
@@ -29,6 +31,7 @@
     "react-native-screens": "^2.15.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^7.1.0",
+    "registry.npmjs.org": "^1.0.1",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
