--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-gesture-handler": "^1.9.0",
     "react-native-image-picker": "^3.1.2",
     "react-native-masked-text": "^1.13.0",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-permissions": "^3.0.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
