--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "expo-image-picker-multiple": "^1.3.1",
     "firebase": "^8.1.1",
     "gerador-validador-cpf": "^5.0.1",
     "link": "^0.1.5",
