--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "16.13.1",
     "react-native": "^0.63.4",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-image-crop-picker": "^0.35.2",
     "react-native-image-picker": "^3.1.2",
     "react-native-masked-text": "^1.13.0",
     "react-native-material-dropdown": "^0.11.1",
