--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.1.0",
+    "@firebase/storage": "^0.4.2",
+    "@google-cloud/storage": "^5.7.1",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/cli": "^4.13.1",
     "@react-native-community/geolocation": "^2.0.2",
@@ -24,6 +26,7 @@
     "link": "^0.1.5",
     "react": "16.13.1",
     "react-native": "^0.63.4",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-image-crop-picker": "^0.35.2",
     "react-native-image-picker": "^3.1.2",
