--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "cpf-cnpj-validator": "^1.0.3",
     "firebase": "^8.1.1",
     "gerador-validador-cpf": "^5.0.1",
     "link": "^0.1.5",
@@ -28,6 +29,7 @@
     "react-native": "^0.63.4",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-image-crop-picker": "^0.35.2",
     "react-native-image-picker": "^3.1.2",
     "react-native-masked-text": "^1.13.0",
