--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase": "^8.1.1",
     "gerador-validador-cpf": "^5.0.1",
     "link": "^0.1.5",
+    "net": "^1.0.2",
     "react": "16.13.1",
     "react-native": "^0.63.4",
     "react-native-fetch-blob": "^0.10.8",
