--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo-google-fonts/montserrat": "^0.1.0",
     "@firebase/storage": "^0.4.2",
     "@google-cloud/storage": "^5.7.1",
+    "@hapi/joi": "^17.1.1",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/cli": "^4.13.1",
     "@react-native-community/geolocation": "^2.0.2",
@@ -24,6 +25,7 @@
     "cpf-cnpj-validator": "^1.0.3",
     "firebase": "^8.1.1",
     "gerador-validador-cpf": "^5.0.1",
+    "joi": "^17.3.0",
     "link": "^0.1.5",
     "net": "^1.0.2",
     "react": "16.13.1",
