Upload de imagem URL feito

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.54.0
+
+MYAPP_UPLOAD_STORE_FILE=devfit.keystore
+MYAPP_UPLOAD_KEY_ALIAS=devfit
+MYAPP_UPLOAD_STORE_PASSWORD=Effizienz10
+MYAPP_UPLOAD_KEY_PASSWORD=Effizienz10
