--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-image-picker": "^3.1.2",
     "react-native-masked-text": "^1.13.0",
     "react-native-material-dropdown": "^0.11.1",
+    "react-native-modalbox": "^2.0.2",
     "react-native-permissions": "^3.0.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
